# tryunes

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
api/: Cargo.toml  Rocket.toml
api/db/: sqlite.db
api/migrations/2020-09-25-204016_create_recipes/: down.sql  up.sql
api/src/: main.rs  models.rs  result.rs  schema.rs
api/src/ingredients/: routes.rs
api/src/recipes/: helpers.rs  mod.rs  models.rs  routes.rs
app/: package-lock.json  package.json
app/src/: App.tsx  index.css  index.tsx
app/src/components/: IngredientCreationForm.tsx  RecipeCard.tsx  RecipeCreationForm.tsx  RecipeIngredientsForm.tsx
app/src/components/Button/: Button.module.css  Button.tsx
app/src/components/RecipeCard/: RecipeCard.module.css  RecipeCard.tsx
app/src/components/RecipePanel/: RecipePanel.module.css  RecipePanel.tsx  index.ts
app/src/components/Recipes/: Recipes.module.css  Recipes.tsx
app/src/hooks/: useIngredients.ts  useIngredientsFetch.ts  useRecipes.ts  useRecipesActions.ts  useRecipesFetch.ts
app/src/models/: ingredients.ts  recipes.d.ts
app/src/providers/: APIProvider.tsx
app/src/reducers/: definitions.ts  reducer.ts
app/src/routes/: IngredientsPage.tsx  RecipesPage.tsx
app/src/services/: common.ts  ingredients.ts  recipes.ts
src/: errors.rs  ingredients.rs  lib.rs  recipes.rs  units.rs
src/sqlite/: ingredients.rs  mod.rs  units.rs
