[package]
name = "tryunes"
version = "0.0.0"
authors = ["Maxence Moutoussamy <maxence.moutoussamy1@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.15", features = ["serde"] }