[package]
name = "tryunes"
version = "0.0.0"
authors = ["Maxence Moutoussamy <maxence.moutoussamy1@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["diesel_sqlite_pool"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.15", features = ["serde"] }
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
itertools = "0.9.0"